Link correction to align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ blockquote{
 
 .link-fix{
       position:absolute;
-      margin-top:-7rem;
+      margin-top:-6rem;
 }
 
 /*FOOTER*/
